--- a/application.ipynb
+++ b/application.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 92,
-   "id": "e3eb25bc",
+   "execution_count": 16,
+   "id": "6f4efc4b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,6 +13,8 @@
     "import time\n",
     "import sys\n",
     "import threading\n",
+    "import json\n",
+    "\n",
     "\n",
     "def get_new_data(patient_id):\n",
     "    res = requests.get(f\"http://tesla.iem.pw.edu.pl:9080/v2/monitor/{patient_id}\")\n",
@@ -22,14 +24,13 @@
     "        \"timestamp\":js[\"trace\"][\"id\"],\n",
     "        \"values\": [x[\"value\"] for x in js[\"trace\"][\"sensors\"]],\n",
     "        \"anomalies\":[x[\"anomaly\"] for x in js[\"trace\"][\"sensors\"]]\n",
-    "        }\n",
-    " "
+    "        }"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
-   "id": "4c68a7fd",
+   "execution_count": 17,
+   "id": "8742715b",
    "metadata": {
     "scrolled": true
    },
@@ -50,7 +51,8 @@
     "class DataCollectorThread(threading.Thread):\n",
     "    def run(self):\n",
     "        store = get_storage()\n",
-    "        for i in range(200):\n",
+    "       # for i in range(10):\n",
+    "        while True:\n",
     "            add_measurements(\"2\", get_new_data(\"2\"))\n",
     "            expire_data(5) \n",
     "            time.sleep(1)\n",
@@ -65,6 +67,7 @@
     "\n",
     "\n",
     "    init_storage()\n",
+    "    #create_layout()\n",
     "    \n",
     "    collector = DataCollectorThread()\n",
     "    collector.start()\n",
@@ -78,8 +81,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
-   "id": "fa995b71",
+   "execution_count": 13,
+   "id": "54dc3615",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,19 +130,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
-   "id": "daeb8c8f",
+   "execution_count": 18,
+   "id": "79041488",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-18-7cd7a68013d7>, line 41)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-18-7cd7a68013d7>\"\u001b[1;36m, line \u001b[1;32m41\u001b[0m\n\u001b[1;33m    @app callback(Output('component_id'='the_plot',component_property='figure' ),\u001b[0m\n\u001b[1;37m                ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "### dash.App\n",
-    "\n"
+    "import dash\n",
+    "import dash_core_components as dcc\n",
+    "import dash_html_components as html\n",
+    "import plotly.graph_objects as go \n",
+    "from dash.dependencies import Input, Output\n",
+    "import numpy as np\n",
+    "from storage import get_storage\n",
+    "\n",
+    "\n",
+    "def legs_plot():\n",
+    "    #HARDCODE OF THE PATIENT 2\n",
+    "    if \"2\" in get_storage:\n",
+    "        pd = get_storage()[\"2\"]\n",
+    "        times = np.array(pd[\"timestamps\"])\n",
+    "        values = np.array(pd[\"values\"])\n",
+    "    else:\n",
+    "        times = np.array([0])\n",
+    "        values = np.array([[0]])\n",
+    "    \n",
+    "    print(times)\n",
+    "    print(values)\n",
+    "    \n",
+    "    fig = go.Figure([go.Scatter(x=times, y = values[:,0],\\\n",
+    "                    line = dict(color = 'firebrick', width = 4), name = 'L0')\n",
+    "                    ])\n",
+    "    return fig\n",
+    "\n",
+    "app = dash.Dash()\n",
+    "\n",
+    "def create_layout():\n",
+    "    \n",
+    "    app.layout = html.Div(id='parent', children = [\n",
+    "            html.H1(id = 'H1', children = 'Styling using html components', style = {'textAlign':'center',\\\n",
+    "                                                                                   'marginTop':40, 'marginBottom':40}),\\\n",
+    "                dcc.Graph(id = 'the_plot', figure = legs_plot()), \\\n",
+    "                dcc.Interval(id='interval', interval=1000, n_intervals=0)\n",
+    "                ])\n",
+    "    \n",
+    "    \n",
+    "@app callback(Output('component_id'='the_plot',component_property='figure' ),\n",
+    "                [Input('component_id'='interval',component_property='n_intervals' )])\n",
+    "def graph_update(n_intervals):\n",
+    "    \n",
+    "    print(n_intervals)\n",
+    "    return legs_plot()\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "01df1277",
+   "id": "3e9d427d",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -147,7 +203,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "53aea016",
+   "id": "66dc3687",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "99348d82",
    "metadata": {},
    "outputs": [],
    "source": []
